// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots RecentTours with specific search 1`] = `
<div
  className="parrot false"
>
  <img
    className="parrot-gif"
    src="/tripletsparrot.gif"
  />
  <div
    className="parrot-title"
  >
    Loading...
  </div>
</div>
`;

exports[`Storyshots RecentTours with tours 1`] = `
<div
  className="parrot false"
>
  <img
    className="parrot-gif"
    src="/tripletsparrot.gif"
  />
  <div
    className="parrot-title"
  >
    Loading...
  </div>
</div>
`;

exports[`Storyshots TourBadge on tour page 1`] = `
<div
  className="dsUieB"
>
  <img
    className="dUriSk"
    src="https://github.com/partyparrot.png"
  />
  <div
    className="a"
  >
    <h1
      className="a"
    >
      <span
        className="jpDMXu"
      >
        Tour of 
      </span>
      partyparrot/codetours-starter-kit
      <span
        className="jpDMXu"
      >
        , led by 
        <a
          href="https://github.com/partyparrot"
        >
          partyparrot
        </a>
      </span>
    </h1>
    <p
      className="fDVTwR"
    >
      Start here when you're making a code tour!
    </p>
  </div>
</div>
`;

exports[`Storyshots TourBadge on tours list 1`] = `
<div
  className="dsUieB"
>
  <img
    className="bOaFwr"
    src="https://github.com/partyparrot.png"
  />
  <div
    className="a"
  >
    <h4
      className="a"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        partyparrot/codetours-starter-kit
        <span
          className="jpDMXu"
        >
           by 
          partyparrot
        </span>
      </a>
    </h4>
    <p
      className="ejEdzr"
    >
      Start here when you're making a code tour!
    </p>
    <p
      className="ejEdzr"
    >
      <span
        className="jpDMXu"
      >
        Contribute at 
      </span>
      <a
        href="https://github.com/partyparrot/codetours-starter-kit"
      >
        partyparrot/codetours-starter-kit
      </a>
    </p>
  </div>
</div>
`;
